<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<data>
    <variable
        name="vm"
        type="com.example.mvvm_tests.ui.main.MainViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewNetWork"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="33dp"
        tools:listitem="@layout/video_view_design">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewDatabase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="33dp"
        tools:listitem="@layout/video_view_design">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/NetworkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_videos"
        android:textSize="11sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewNetWork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <Button
        android:id="@+id/DatabaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database_videos"
        android:textSize="11sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewNetWork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageButton
        android:id="@+id/TransferButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewNetWork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        app:srcCompat="@android:drawable/ic_media_ff"
        app:tint="@color/teal_200"
        android:contentDescription="@string/transfer_data_to_database" />

    <TextView
        android:id="@+id/ViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_videos_1"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerviewNetWork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>